--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastapi
-uvicorn[standard]
-aiogram
-sqlmodel
+streamlit
+python-telegram-bot
+groq
+supabase
 feedparser
-httpx
-beautifulsoup4
-apscheduler
-python-dotenv
-gunicorn
+schedule
+pandas
+pdfplumber
+google-generative-ai
+pydantic
