--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit
-python-telegram-bot
+python-telegram-bot==20.7
 groq
 supabase
 feedparser
@@ -7,4 +7,4 @@ schedule
 pandas
 pdfplumber
 google-generative-ai
-pydantic
+pydantic==1.10.13
