--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit
-python-telegram-bot==20.7
+python-telegram-bot==21.3
 groq
 supabase
 feedparser
@@ -8,3 +8,5 @@ pandas
 pdfplumber
 pydantic
 httpx==0.27.0
+beautifulsoup4
+requests
